fixed alignment

--- a/views/static/styles/Components/_our-team.scss
+++ b/views/static/styles/Components/_our-team.scss
@@ -1,4 +1,7 @@
 //      OUR TEAM PAGE
+.display-in-center{
+  text-align: center;
+}
 
 .team {
   justify-content: center;
@@ -40,7 +43,7 @@
   &-member-student::before {
     position: absolute;
     content: "";
-    width: 59%;
+    width: 85%;
     border-radius: 5px;
     height: 220%;
     background: rgba(62, 186, 243, 0.7);
